preserve pattern ordering and add sort option